--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Fullstack Developer(in training)</h2>
     <hr>
     <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking.png" alt="movie ranking Preview" height="200px">
+    <img src="./assets/images/best-movies.jpg" alt="movie ranking Preview" height="200px">
     <h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
     <img src="./assets/images/birthdayinvite.jpg" alt="birthday invite">
     <hr>
